apps/alucard-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alucard-web
  namespace: alucard-web
spec:
  type: ClusterIP
  selector:
    app: alucard-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
